pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-express
  # 指定 label，便于检索
  labels:
    app: node-express
spec:
  containers:
  - name: node-express
    # 指定镜像
    image: huangyanyan/node-express-service
    # 指定暴露端口
    ports:
    - containerPort: 8080
