service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-express-service
spec:
  selector:
    app: node-express
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
